<resources>
    <string name="app_name">Y</string>

    <!-- Emotions -->

    <string name="emotion_anger_emoji">😡</string>
    <string name="emotion_confusion_emoji">😕</string>
    <string name="emotion_disgust_emoji">🤮</string>
    <string name="emotion_fear_emoji">😱</string>
    <string name="emotion_happiness_emoji">😄</string>
    <string name="emotion_sadness_emoji">😭</string>
    <string name="emotion_shame_emoji">😞</string>
    <string name="emotion_surprise_emoji">😳</string>
    <string name="emotion_laughter_emoji">💀</string>
    <string name="more_than_one_mood">➕</string>

    <!-- emoticon -->
    <string-array name="emotionEmoticonArray">
        <item>( •`Δ´•)!</item>
        <item>( @_@)?</item>
        <item>( ¬＿¬)</item>
        <item>(( •Д•))</item>
        <item>( ｡•ᴗ•｡)</item>
        <item>( ಥ╭╮ಥ)</item>
        <item>( ｡•́~•̀｡)</item>
        <item>( ⊙_⊙)!</item>
        <item>( ≧∇≦)</item>
    </string-array>

    <!-- Emotion Colours -->
    <string-array name="emotionColorArray">
        <item>#E82828</item>
        <item>#DC326C</item>
        <item>#5C904E</item>
        <item>#A147D9</item>
        <item>#F2E46D</item>
        <item>#3C66A2</item>
        <item>#4C4C4C</item>
        <item>#7C0909</item>
        <item>#F28E3D</item>
    </string-array>

    <!-- Emotion Text -->
    <string-array name="emotionTextArray">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
        <item>Laughter</item>
    </string-array>


    <!-- Values -->
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Confirm_email">Confirm email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="return_to_login">Return to Login</string>

    <string name="mood_following">Mood Following</string>
    <string name="mood_map">Mood Map</string>
    <string name="search">Search</string>
    <string name="user_profile">User Profile</string>
    <string name="user">User</string>
    <string name="date_and_time">Date and Time</string>
    <string name="emoticon">Emoticon</string>
    <string name="alone">Alone</string>
    <string name="reason_why_text">Reason why text</string>
    <string name="mood_photo">Mood photo</string>
    <string name="location">Location</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="addMoodEvent">Add</string>
    <string name="my_mood_history">My Mood History</string>
    <string name="my_personal_journal">My Personal Journal</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="home">Home</string>

    <!--  Mood list content  -->
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="requested">Requested</string>

    <!--add mood form strings-->
    <string name="back">Back</string>
    <string name="insert_image">Insert Image</string>
    <string name="hint_reason_why_text">Why do you feel this way?</string>
    <string name="hint_trigger">What was the trigger?</string>
    <string name="hint_explanation">Explain your mood...</string>
    <string name="share_location">Share location</string>
    <string name="submit">Submit</string>
    <string name="permission_denied">Storage permission required to select images</string>
    <string name="date_for_mood_event">Date For Mood Event</string>
    <string name="delete_this_mood">Delete this mood</string>
    <string name="edit_this_mood">Edit this mood.</string>
    <string name="update_this_mood">Update this mood</string>

    <!-- Date filter buttons -->
    <string name="minDateBtnText">Min Date</string>
    <string name="maxDateBtnText">Max Date</string>
    <string name="private_this_mood_event">Private this Mood Event</string>
    <string name="privateString">Private</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="send">Send</string>
    <string name="mood_event_image">Mood Event Image</string>

    <string-array name="mood_array">
        <item>😡</item>
        <item>😕</item>
        <item>🤮</item>
        <item>😱</item>
        <item>😄</item>
        <item>😭</item>
        <item>😞</item>
        <item>😳</item>
        <item>💀</item>
    </string-array>


    <string-array name="social_situation_array">
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>

    </string-array>

    <string name="slot_machine_ad_text">We noticed you\'ve been feeling sad lately. Our slot machine can bring joy into your life once again!</string>
    <string name="slot_machine_ad_button">Try it now!</string>
    <string name="editbutton">editButton</string>


</resources>