...
                        android:src="@drawable/left_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/updateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:maxLength="200"
                    android:hint="@string/hint_reason_why_text" />
...
                    android:id="@+id/spinnerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <Spinner
                        android:id="@+id/spinnerMoodUpdate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/UpdateMoodButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/update_this_mood"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            app:backgroundTint="@color/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deleteMoodButton"
            tools:ignore="MissingConstraints" />
        <Button
            android:id="@+id/deleteMoodButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
...
