...

        </LinearLayout>


    <!-- Mood list for the user -->
    <com.example.y.utils.MoodListView
        android:id="@+id/listviewMoodEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMoodBtn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/add"
        android:backgroundTint="@color/addMood"
        android:contentDescription="Mood add button"
        app:elevation="8dp" />

</FrameLayout>

